# GRAV-T

./: .gitignore  README.md  config.py  constants.py  debug_tail.py  domain_gen.py  equations.py  exponential.py  h5utils.py  hydro_plotter.py  hydrodynamics.py  integration_run.py  investigate_gw.py  lander.py  linear.py  main.py  multi_plotter.py  multi_plotter_hydro.py  multi_plotter_mass.py  name_maps.py  nozzle_flow.py  ode_plotter.py  orbit_plotter.py  plots_only.py  plotter.py  polarization_plotter.py  polarizations.py  pyproject.toml  roche_geometry.py  todo.txt  variable_decay_rate.py  variable_hydro.py  variable_mass.py  verbprint.py
__pycache__/: equations._F_factors-136.py313.1.nbc  equations._F_factors-136.py313.nbi  equations._F_factors-139.py313.1.nbc  equations._F_factors-139.py313.nbi  equations._F_factors-153.py313.1.nbc  equations._F_factors-153.py313.nbi  equations._F_factors-156.py313.1.nbc  equations._F_factors-156.py313.nbi  equations._Fp_factors-150.py313.1.nbc  equations._Fp_factors-150.py313.nbi  equations._Fp_factors-153.py313.1.nbc  equations._Fp_factors-153.py313.nbi  equations._Fp_factors-167.py313.1.nbc  equations._Fp_factors-167.py313.nbi  equations._Fp_factors-170.py313.1.nbc  equations._Fp_factors-170.py313.nbi  (+215 more)
problems/: exponential1.toml  exponential_better.toml  exponential_problem1.toml  exponential_test.toml  hydro_extreme.toml  hydrodynamic.toml  lander.toml  linear1.toml  linear2.toml  linear_better.toml  linear_fast.toml  pyproject.toml  test_config.toml  test_config_linear.toml  verify.toml  verify_linear.toml
