[project]
name = "mom2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autograd>=1.8.0",
    "celluloid>=0.2.0",
    "datashader>=0.18.2",
    "diffrax>=0.6.1",
    "fastplotlib>=0.6.1",
    "glfw>=2.10.0",
    "h5py>=3.15.1",
    "jax[cuda,cuda13]>=0.4.30",
    "joblib>=1.5.2",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numbaquadpack",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "pygfx>=0.15.3",
    "pyvista>=0.46.4",
    "scipy>=1.13.1",
    "scipy-stubs>=1.16.3.3",
    "sympy>=1.14.0",
    "tomli>=2.3.0",
    "tqdm>=4.66.5",
    "wgpu>=0.28.1",
]

[tool.uv.sources]
numbaquadpack = { git = "https://github.com/croi900/NumbaQuadpack" }
