[project]
name = "mom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autograd>=1.8.0",
    "datashader>=0.18.2",
    "diffrax>=0.6.1",
    "fastplotlib>=0.6.1",
    "glfw>=2.10.0",
    "h5py>=3.15.1",
    "jax[cuda,cuda13]>=0.4.30",
    "joblib>=1.5.2",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "pygfx>=0.15.3",
    "pyvista>=0.46.4",
    "scipy>=1.13.1",
    "tqdm>=4.66.5",
    "wgpu>=0.28.1",
]
